# garmin-data-analysis

./: .gitignore  Makefile  README.md  garmin_extractor.py  main.py  test_garmin_extractor.py
backend/: README.md  pyproject.toml  requirements.txt
backend/docs/: architecture.md
backend/scripts/: upload_to_s3.py
backend/src/api/: __init__.py  app.py
backend/src/extraction/: __init__.py  extractor.py  fit_extractor.py  runner.py  strava_extractor.py
backend/src/garmin_data_extraction/: __init__.py  extractor.py  runner.py
backend/src/services/: __init__.py  data_service.py  duckdb_service.py  training_plan_service.py
backend/tests/: __init__.py  test_api.py  test_db_build.py  test_duckdb_service.py  test_extractor.py  test_strava_extractor.py  test_training_plan_service.py
db/: build.py
frontend/: README.md  index.html  plans.html
frontend/scripts/: app.js
frontend/styles/: main.css
