[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-data-extraction-backend"
version = "0.1.0"
description = "Backend extraction library for Garmin wellness exports."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
