[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-data-extraction-backend"
version = "0.1.0"
description = "Backend extraction library for Garmin wellness exports."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "fitparse>=1.2",
    "fsspec>=2024.1",
    "pandas>=2.2,<3",
    "uvicorn>=0.30,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["api", "api.*", "extraction", "extraction.*", "services", "services.*"]
